# PTOASwql

./: CMakeLists.txt  PTO_OPS_SPEC.md  README.md
.github/workflows/: build_wheel.yml  build_wheel_mac.yml
docker/: Dockerfile  collect_ptoas_dist_mac.sh  create_wheel.sh  get_macos_wheel_plat_name.py  setup_mac.py  test_ptoas_cli.sh
docs/: PTO_IR_manual.md
include/PTO/IR/: PTOOps.td
include/PTO/Transforms/: BlockSyncAnalysis.h  Passes.h
include/pto-c/Dialect/: PTO.h
lib/Bindings/Python/: CMakeLists.txt
lib/CAPI/Dialect/: PTO.cpp
lib/PTO/IR/: PTO.cpp
lib/PTO/Transforms/: AllocToPointerCast.cpp  AllocToPointerCast.h  MoveSyncState.cpp  PTOConvert.cpp  PTOInsertCVMov.cpp  PTOPlanMemory.cpp  PTOToEmitC.cpp  PTOVFloopGather.cpp  PTOViewToMemref.cpp  SyncEventIdAllocation.cpp
python/pto/dialects/: pto.py
test/basic/: record_wait_event.mlir
test/samples/: runop.sh
test/samples/Abs/: abs.py
test/samples/Colsum/: colsum.py
test/samples/Complex/: mix_kernel.py
test/samples/Gatherb/: gatherb.py
test/samples/Mgather/: mgather.py
test/samples/Mins/: mins.py
test/samples/Mscatter/: mscatter.py
test/samples/Muls/: muls.py
test/samples/Ors/: ors.py
test/samples/Prelu/: prelu.py
test/samples/Sels/: sels.py
test/samples/Subset/: subset_tsubs.py
test/samples/SyncHigh/: syncHigh.py
test/samples/Xor/: xor.py
test/samples/Xors/: xors.py
tools/ptoas/: ptoas.cpp
